tests/baselines/reference/typeParameterUsedAsTypeParameterConstraint4.errors.txt
==== tests/cases/compiler/typeParameterUsedAsTypeParameterConstraint4.ts (18 errors) ====
    // Type parameters are in scope in their own and other type parameter lists
    // Some negative cases
    
    class C<T, U extends T, V extends U> {
               ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                            ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        z: W; // error
           ~
!!! error TS2095: Could not find symbol 'W'.
        foo<W extends V>(x: W): T {
            var r: T;
            return x;
        }
    }
    
    interface I<T, U extends T, V extends U> {
                   ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        x: T;
        y: U;
        z: W; // error
           ~
!!! error TS2095: Could not find symbol 'W'.
        foo<W extends V>(x: W): T;
    }
    
    function foo<T, U extends T>(x: T, y: U): V { // error
                    ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                              ~
!!! error TS2095: Could not find symbol 'V'.
        function bar<V extends T, W extends U>(): X { // error
                                                  ~
!!! error TS2095: Could not find symbol 'X'.
            function baz<X extends W, Y extends V>(a: X, b: Y): T {
                x = y;
                return y;
            }
        }
    }
    
    function foo2<U extends T, T>(x: T, y: U): W { // error
                  ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                               ~
!!! error TS2095: Could not find symbol 'W'.
        function bar<V extends T, W extends U>(): Y { // error
                                                  ~
!!! error TS2095: Could not find symbol 'Y'.
            function baz<X extends W, Y extends V>(a: X, b: Y): T {
                x = y;
                return y;
            }
        }
    }
    
    var f3 = <T, U extends T>(x: T, y: U) => {
                 ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        function bar<V extends T, W extends U>(r: X, s: Y) { // error
                                                  ~
!!! error TS2095: Could not find symbol 'X'.
                                                        ~
!!! error TS2095: Could not find symbol 'Y'.
            var g = <X extends W, Y extends V>(a: X, b: Y): T => {
                x = y;
                return y;
            }
        }
    }
    
    var f4 = <U extends T, T>(x: V, y: X) => { // error
              ~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                 ~
!!! error TS2095: Could not find symbol 'V'.
                                       ~
!!! error TS2095: Could not find symbol 'X'.
        function bar<V extends T, W extends U>() {
            var g = <X extends W, Y extends V>(a: X, b: Y): T => {
                x = y;
                return y;
            }
        }
    }